feat: albums renamed to posts
