# models/post.go
@@ -1,26 +1,26 @@
 package models
 
-type Album struct {
-	ID     int     `gorm:"primaryKey;autoIncrement" json:"album_id"`
+type Post struct {
+	ID     int     `gorm:"primaryKey;autoIncrement" json:"post_id"`
 	Name   string  `gorm:"not null" json:"name"`
 	UserID int     `json:"user_id" gorm:"not null"`
 	User   User    `gorm:"foreignKey:UserID;references:ID;constraint:OnDelete:CASCADE"`
-	Images []Image `gorm:"many2many:album_images"`
+	Images []Image `gorm:"many2many:post_images"`
 }
 
-type AlbumUnit struct {
+type PostUnit struct {
 	Name   string            `json:"name"`
 	Images map[string]string `json:"images"`
 }
 
-// AlbumRegister uses only for swagger
-type AlbumRegister struct {
+// PostRegister uses only for swagger
+type PostRegister struct {
 	Name string `json:"name"`
 }
 
-type AlbumImage struct {
-	AlbumID int   `gorm:"primaryKey"`
+type PostImage struct {
+	PostID  int   `gorm:"primaryKey"`
 	ImageID int   `gorm:"primaryKey"`
-	Album   Album `gorm:"foreignKey:AlbumID;references:ID;constraint:OnDelete:CASCADE"`
+	Post    Post  `gorm:"foreignKey:PostID;references:ID;constraint:OnDelete:CASCADE"`
 	Image   Image `gorm:"foreignKey:ImageID;references:ID;constraint:OnDelete:CASCADE"`
 }
